--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -20,7 +20,7 @@ LRP methods require assessments of status at the scale of CUs. Abundance data re
 \end{itemize}
 \end{tcolorbox}
 
-Hatcheries contribute to spawning abundances of many salmon stocks and can be used as a conservation tool as well as a way to increase the availability of fish for harvest. Hatcheries can also reduce wild genetic diversity and fitness, defined as adult-to-adult reproductive success, and are considered a risk factor for the long-term persistence of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are hatchery-origin, as well as their progeny, are not considered 'wild' under the Wild Salmon Policy. Typically, only populations dominated by wild salmon are included in assessments of biological status. However, separating out the influence of hatcheries in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin salmon are often not marked, e.g., with fin clips or fish tags, and so are indistinguishable from natural-origin spawners. Also, many salmon escapement programs, such as those where salmon spawners are counted from helicopters [@parkenIncorporatingUncertaintyArea2003], do not have biological sampling programs to collect mark and tag data from individual salmon. 
+Hatcheries contribute to spawning abundances of many salmon populations<!--LW: changed from stocks--> and can be used as a conservation tool as well as a way to increase the availability of fish for harvest. Hatcheries can also reduce wild genetic diversity and fitness, defined as adult-to-adult reproductive success, and are considered a risk factor for the long-term persistence of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are hatchery-origin, as well as their progeny, are not considered 'wild' under the Wild Salmon Policy. Typically, only populations dominated by wild salmon are included in assessments of biological status. However, separating out the influence of hatcheries in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin salmon are often not marked, e.g., with fin clips or fish tags, and so are indistinguishable from natural-origin spawners. Also, many salmon escapement programs, such as those where salmon spawners are counted from helicopters [@parkenIncorporatingUncertaintyArea2003], do not have biological sampling programs to collect mark and tag data from individual salmon. 
 
 ### Accounting for genetic risks of hatchery production
 
@@ -136,7 +136,7 @@ CH: the challenge is I had original text saying the Salmon Scanner did not incor
 \end{table}
 
 
-Various benchmarks on spawner abundances have been identified to account for differences in data types, quantities and qualities among CUs. For data-rich CUs where spawner-recruitment relationships can be reliably estimated, @holtEvaluationBenchmarksConservation2009 recommend a lower benchmark at the abundance resulting in recovery to spawner abundances at maximum sustained yield, S~MSY~, in one salmon generation under equilibrium conditions, S~gen~. When applying stock-recruitment analyses, the spatial scale of density dependence should be carefully considered, which may be smaller or larger than the CU. Where recruitment time-series are not available and productivity is assumed to be moderate or high, and harvest rates moderate or low, specified percentiles of observed spawner time-series (e.g., 25^th^) can be used as a proxy for spawner-recruitment benchmarks [@holtEvaluatingBenchmarksBiological2018]. For Chinook and Coho Salmon where production is often limited by the quantity of freshwater habitat, equilibrium spawner abundances can be predicted from habitat characteristics to inform abundance-based benchmarks [@nobleHabitatbasedEscapementBenchmarks2015; @parkenHabitatbasedMethodsEstimate2006]. For example, @parkenHabitatbasedMethodsEstimate2006 use the relationship between watershed area and spawner-recruitment based reference points in a meta-analysis of Chinook Salmon stocks from across the Pacific region to predict reference points for Chinook stocks without recruitment data.
+Various benchmarks on spawner abundances have been identified to account for differences in data types, quantities and qualities among CUs. For data-rich CUs where spawner-recruitment relationships can be reliably estimated, @holtEvaluationBenchmarksConservation2009 recommend a lower benchmark at the abundance resulting in recovery to spawner abundances at maximum sustained yield, S~MSY~, in one salmon generation under equilibrium conditions, S~gen~. When applying stock-recruitment analyses, the spatial scale of density dependence should be carefully considered, which may be smaller or larger than the CU. Where recruitment time-series are not available and productivity is assumed to be moderate or high, and harvest rates moderate or low, specified percentiles of observed spawner time-series (e.g., 25^th^) can be used as a proxy for spawner-recruitment benchmarks [@holtEvaluatingBenchmarksBiological2018]. For Chinook and Coho Salmon where production is often limited by the quantity of freshwater habitat, equilibrium spawner abundances can be predicted from habitat characteristics to inform abundance-based benchmarks [@nobleHabitatbasedEscapementBenchmarks2015; @parkenHabitatbasedMethodsEstimate2006]. For example, @parkenHabitatbasedMethodsEstimate2006 use the relationship between watershed area and spawner-recruitment based reference points in a meta-analysis of Chinook Salmon populations<!--LW: changed from stocks. Paper uses the word stock but I think they are different than SMUs or CUs (pre-CU and SMU definitions)--> from across the Pacific region to predict reference points for Chinook populations<!--LW: changed from stocks--> without recruitment data.
 
 Similarly, metrics and benchmarks on long-term and short-term trends in spawner abundances are included in the Salmon Scanner. Long-term trends are measured by the ratio of recent generational geometric average spawner abundances relative to the long-term geometric average, and short-term trends are measured as the percent change in spawner abundances over 3 generations, the time period used in COSEWIC assessments [@holtEvaluationBenchmarksConservation2009]. Lower benchmarks on these metrics represent levels below which there is increased risk of extinction [@holtIndicatorsStatusBenchmarks2009]. <!--CH: I feel like this is repetitive given the table, but Sue asked for a more balanced description of metrics and benchmarks, covering all categories...-->
 
